# LearnPilot

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  README.md  admin_tool.py  development_step2.md  implementation_plan.md  process_attention_paper.sh  pyproject.toml  quick_test.sh  requirements.txt  simple_admin.py  start_dev.sh  start_up_viewer.sh  start_web.sh  unit_test.sh
frontend/: .env.example  .gitignore  DEPLOYMENT.md  README.md  design-system.md  frontend_log.txt  frontend_pid.txt  index.html  package.json  start_frontend.sh  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.tsx  SimpleApp.tsx  index.css  main.js  main.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx
frontend/src/js/components/ui/: Button.js  Card.js  Input.js  Modal.js  Notification.js
frontend/src/js/pages/: AdminPage.js  AnalysisPage.js  DashboardPage.js  GraphPage.js  HomePage.js  LoginPage.js  PlanPage.js  RegisterPage.js  SettingsPage.js  UploadPage.js
frontend/src/js/services/: api.js
frontend/src/js/utils/: helpers.js  router.js  storage.js
frontend/src/pages/: AdminPage.tsx  AnalysisPage.tsx  DashboardPage.tsx  GraphPage.tsx  LoginPage.tsx  PlanPage.tsx  RegisterPage.tsx  SettingsPage.tsx  SimpleDashboardPage.tsx  SimpleLoginPage.tsx  SimpleRegisterPage.tsx  SimpleUploadPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts  authApi.ts
frontend/src/stores/: authStore.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
src/learn_pilot/: main.py
src/learn_pilot/agents/: code_skeleton_generator.py  guidance_teacher.py  knowledge_extractor.py  knowledge_graph_agent.py  learning_planer.py  paper_analysisor.py  task_sheet_generator.py
src/learn_pilot/ai/: monitoring.py  optimization.py  optimized_agents.py
src/learn_pilot/auth/: admin_auth.py  auth.py
src/learn_pilot/core/agents/: __init__.py  structured_output_agent.py
src/learn_pilot/core/config/: __init__.py  config.py  security_config.py
src/learn_pilot/core/logging/: logger.py
src/learn_pilot/database/: __init__.py  init_admin.py  models.py  service.py
src/learn_pilot/literature_utils/: markdown_parser.py
src/learn_pilot/literature_utils/knowledge_parser/: pdf_to_markdown.py
src/learn_pilot/literature_utils/knowledge_search/: README.md  perpelxity_utils.py
src/learn_pilot/models/: graph_models.py  paper_models.py  task_models.py
src/learn_pilot/prompts/: code_skeleton.txt  concept_extraction.txt  learning_plan.txt  paper_analysis.txt  task_generation.txt
src/learn_pilot/services/: notification_service.py  pipeline_orchestrator.py
src/learn_pilot/services/arxiv_monitor/: __init__.py  arxiv_client.py  filter_agent.py  paper_daily.py  paper_service.py  pdf_downloader.py
src/learn_pilot/tools/: graph_utils.py
src/learn_pilot/tools/database/: README.md  __init__.py  __main__.py  cleanup_all.py  cli_app.py  db_viewer.py
src/learn_pilot/tools/file_system/: __init__.py  paper_repository.py
src/learn_pilot/tools/pricing/: __init__.py  compute_price.py
src/learn_pilot/tools/translation/: __init__.py  translation_agent.py
src/learn_pilot/web/: admin_api.py  main.py  main.py.backup
tests/: README.md  quick_demo.py  run_all_tests.py  test_full_pipeline.py  test_knowledge_extractor.py  test_paper_analysisor.py
tests/outputs/quick_demo/: pipeline_report.md
tests/outputs/quick_demo/analysis/: analysis_report.md  paper_analysis.json
tests/outputs/quick_demo/extraction/: concept_extraction.json  concept_extraction_report.md
tests/test_marldown_folder/: 1706.03762v7.Attention_Is_All_You_Need.md
